# keycard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
apps/keycard-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/keycard-app/src/: i18n.ts  main.ts  provider-presets.ts  style.css  theme.ts
apps/keycard-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/keycard-app/src-tauri/capabilities/: default.json
apps/keycard-app/src-tauri/icons/: icon.icns
apps/keycard-app/src-tauri/src/: main.rs
crates/keycard-cli/: Cargo.toml
crates/keycard-cli/src/: main.rs
crates/keycard-cli/tests/: cli_integration.rs
crates/keycard-core/: Cargo.toml
crates/keycard-core/src/: crypto.rs  db.rs  error.rs  lib.rs  models.rs  paths.rs  session.rs  vault.rs
docs/: MANUAL_TEST.md  OPEN_SOURCE.md  cli-setup-macos.md  cli-setup-windows.md
docs/superpowers/plans/: 2026-03-29-keycard.md
docs/superpowers/specs/: 2026-03-29-keycard-design.md
scripts/macos/: save-cli-to-keycard.sh
