[package]
name = "keycard-core"
version = "0.1.0"
edition = "2021"
description = "Keycard vault core: paths, crypto, SQLite (library)"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
dirs = "6"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
